# Projeto-Integrador-V

./: .tool-versions  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/: CODEOWNERS
backend/: Makefile  pyproject.toml
backend/tests/: test_app.py
